<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view"
    tools:ignore="UnusedResources">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_meals"
            android:icon="@raw/meal"
            android:title="@string/menu_meals" />
        <item
            android:id="@+id/nav_meals_history"
            android:icon="@drawable/ic_baseline_calendar_month_24"
            android:title="@string/menu_meals_history" />
        <item
            android:id="@+id/calStartFragment"
            android:icon="@raw/calculator"
            android:title="@string/calculator" />
        <item
            android:id="@+id/nav_body_measurements"
            android:icon="@raw/body_meas_icon"
            android:title="@string/menu_body_measurements" />
        <item
            android:id="@+id/nav_foods"
            android:icon="@raw/database"
            android:title="@string/menu_foods" />
        <item
            android:id="@+id/infoFragment"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/menu_info" />
    </group>
</menu>