<?xml version="1.0" encoding="utf-8"?>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        tools:context="com.damian.myfitnessproject.ui.calculator.neat.CalNeatFragment"
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:transitionGroup="true">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.google.android.material.progressindicator.LinearProgressIndicator
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:min="0"
            android:max="5"
            android:progress="2"
            app:indicatorColor="@color/customBlue"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:orientation="vertical">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/description"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:text="@string/neat_desc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/body_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="10dp"
                android:text="@string/body_type" />

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp">
                <RadioGroup
                    android:id="@+id/radio_group_somatyp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/body_type_label"
                    android:weightSum="2"
                    android:padding="16dp"
                    android:orientation="vertical">
                    <RadioButton
                        android:id="@+id/radio_ektomorf"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/ectomorph"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2" />

                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/ektomorfDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/ectomorphDesc" />

                    <RadioButton android:id="@+id/radio_endomorph"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/endomorph" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/endomorph_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/endomorphDesc" />
                    <RadioButton android:id="@+id/radio_mesomorph"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/mesomorph" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/mesomorph_desc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/mesomorphDesc"/>
                </RadioGroup>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/activity_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginEnd="4dp"
                android:layout_marginTop="20dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:text="@string/daily_activity_level" />

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/activity_relative_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardElevation="4dp">

                <RadioGroup
                    android:id="@+id/radio_group_activity"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="6dp"
                    android:weightSum="2"
                    android:orientation="vertical">
                    <RadioButton android:id="@+id/radio_lov"
                        android:layout_weight="1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:text="@string/lov" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/lovDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/lovActivityDesc" />
                    <RadioButton android:id="@+id/radio_med"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/medium" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/medDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/medActivityDesc" />
                    <RadioButton android:id="@+id/radio_high"
                        android:layout_weight="1"
                        android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/high_act" />
                    <com.google.android.material.textview.MaterialTextView
                        android:id="@+id/hightDesc"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:text="@string/highActivityDesc" />
                </RadioGroup>

            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_next_step"
                android:layout_width="180dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                android:layout_height="50dp"
                android:text="@string/next_step"
                android:layout_gravity="end" />
        </LinearLayout>

    </androidx.appcompat.widget.LinearLayoutCompat>


    </ScrollView>